تم إستخدام setActivityforResult

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
         <item>علي</item>
         <item>تامر</item>
     </string-array>
+    <string name="title_activity_mongo">MongoActivity</string>
 </resources>
